# speculate

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  TODO.md  changelog.md  speculate.cabal  stack.yaml
.github/workflows/: build.yml
bench/: addition.hs  addition.txt  arith-c  arith-t  arith-t.txt  arithficial.hs  bool-c  bool-c.txt  digraphs-c  insertsort-c  list-c  list-t  list-t.txt  lowtests.hs  minus-c  nord.hs  nord.txt  numbool-c  runtime-zero  stats.txt  trilean.hs  unit.hs  versions
bench/qs1/: 0arith.out  Makefile  arith-negate-abs.out  arith.hs  arith.out  arithficial.hs  arithficial.out  bool.hs  bool.out  list.hs  list.out  plus-abs.hs  plus-abs.out  regexes.hs  regexes.out  runtime-zero
bench/qs2/: 0arith.hs  0arith.out  Makefile  arith-negate-abs.hs  arith-negate-abs.out  arith.hs  arith.out  arithficial.hs  arithficial.out  binarytree.hs  binarytree.out  binarytree.out1  binarytree.out3  binarytree.out4  binarytree.runtime-zero  bool.hs  bool.out  insertsort.hs  insertsort.out  lenzip.hs  list-ineq.hs  list.hs  list.out  plus-abs-ineq.hs  plus-abs.hs  plus-abs.out  regexes.hs  regexes.out  runtime-zero  zip.hs  zip.out
bench/runtime/lapmatrud/eg/: insertsort.runtime
bench/runtime/zero/: versions
bench/runtime/zero/bench/: arith-t.runtime
bench/runtime/zero/eg/: insertsort.runtime  ratio.runtime
eg/: 0arith.hs  Digraph.hs  Regex.hs  Set.hs  Taut.hs  algebraic-graphs.hs  algebraic-graphs.txt  arith-negate-abs.hs  arith-negate-abs.txt  arith.hs  binarytree.hs  binarytree0.hs  bool.hs  color.hs  colour.hs  digraphs.hs  digraphs.txt  fun.hs  fun.txt  insertsort.hs  insertsort.txt  insertsort0.hs  length.hs  lenzip.hs  list.hs  list.txt  minus.hs  monad.hs  monad.txt  numbool.hs  oddeven.hs  plus-abs.hs  plus-abs.txt  pretty-compact.hs  pretty.hs  pretty.txt  ratio.hs  ratio.txt  regexes.hs  sets.hs  (+7 more)
mk/: Toplibs.hs  depend.mk  haskell.mk
src/: Speculate.hs
src/Speculate/: CondReason.hs  Engine.hs  Expr.hs  Misc.hs  Reason.hs  SemiReason.hs  Utils.hs
src/Speculate/Expr/: Canon.hs  Core.hs  Equate.hs  Ground.hs  Match.hs  TypeInfo.hs
src/Speculate/Reason/: Order.hs
src/Speculate/Utils/: Class.hs  Color.hs  Digraph.hs  List.hs  Misc.hs  PrettyPrint.hs  String.hs  Tiers.hs  Tuple.hs  Typeable.hs
src/Test/: Speculate.hs
src/Test/Speculate/: Args.hs  CondReason.hs  Engine.hs  Expr.hs  Function.hs  Misc.hs  Pretty.hs  Reason.hs  Report.hs  Sanity.hs  SemiReason.hs  Utils.hs
src/Test/Speculate/Expr/: Canon.hs  Core.hs  Equate.hs  Ground.hs  Instance.hs  Match.hs  TypeInfo.hs
src/Test/Speculate/Function/: A10.hs  A100.hs  A1000.hs
src/Test/Speculate/Reason/: Order.hs
src/Test/Speculate/Utils/: Class.hs  Color.hs  Colour.hs  Digraph.hs  List.hs  Memoize.hs  Misc.hs  Ord.hs  PrettyPrint.hs  String.hs  Tiers.hs  Timeout.hs  Tuple.hs  Typeable.hs
test/: Test.hs  benchmark-save  diff  engine.hs  eval.hs  expr.hs  order.hs  reason.hs  sdist  test-model  utils.hs
test/Test/: ListableExpr.hs
test/model/: algebraic-graphs-s4.out  algebraic-graphs-s7.out  arith-c.out  arith-negate-abs-s4.out  arithficial-s4.out  arithficial.out  bool.out  colour-s4.out  colour.out  digraphs-s4.out  fun-s4.out  insertsort-s4.out  insertsort.out  insertsort0-s4.out  insertsort0.out  length.out  list-c-s4.out  lowtests-s4.out  lowtests.out  minus-c-s4.out  minus-s4.out  minus.out  nord-s4.out  oddeven-s4.out  oddeven.out  plus-abs-s4.out  pretty-compact.out  pretty-s4.out  ratio-s4.out  regexes-s4.out  regexes.out  speculate-reason.out  string-s4.out  string.out  tauts-s4.out  tauts.out  trilean-s4.out  trilean.out  zip-s4.out  zip.out
tests/: Test.hs  benchmark-save  test-creason.hs  test-engine.hs  test-eval.hs  test-expr.hs  test-match.hs  test-misc.hs  test-model  test-order.hs  test-reason.hs  test-stats.hs  test-utils.hs  update-test-model
tests/Test/: ListableExpr.hs
tests/model/: 0arith  0arith-s4  algebraic-graphs  algebraic-graphs-s4  algebraic-graphs-s4.out  algebraic-graphs-s7  arith  arith-c  arith-c-s4  arith-negate-abs  arith-negate-abs-s4  arith-negate-abs-s4.out  arith-s4  arith-s4.out  arith.out  arithficial  arithficial-s4  binarytree  binarytree-s4  binarytree-s4.out  binarytree.out  binarytree0  binarytree0-s4.out  binarytree0.out  bool  bool-c  bool-c-s4  bool-s4  bool-s4.out  bool.out  color-s4  colour  colour-s4  colour-s4.out  digraphs  digraphs-c  digraphs-c-s4  digraphs-s4  digraphs-s4.out  digraphs.out  (+83 more)
