name:                speculate
version:             0.4.1
synopsis:            discovery of properties about Haskell functions
description:
  Speculate automatically discovers laws about Haskell functions.
  Give Speculate a bunch of Haskell functions and it will discover laws like:
  .
  * equations, such as @ id x == x @;
  .
  * inequalities, such as @ 0 <= x * x @;
  .
  * conditional equations, such as @ x \<= 0  ==\>  x + abs x == 0 @.

homepage:            https://github.com/rudymatela/speculate#readme
license:             BSD3
license-file:        LICENSE
author:              Rudy Matela,  Colin Runciman
maintainer:          Rudy Matela <rudy@matela.com.br>
category:            Testing
build-type:          Simple
cabal-version:       1.18

extra-doc-files: README.md
               , TODO.md
               , doc/speculate.svg
extra-source-files: .gitignore
                  , .travis.yml
                  , Makefile
                  , bench/*.hs
                  , bench/arith-c
                  , bench/bool-c
                  , bench/list-c
                  , bench/minus-c
                  , bench/qs1/*.hs
                  , bench/qs1/*.out
                  , bench/qs1/Makefile
                  , bench/qs1/runtime-zero
                  , bench/qs2/*.hs
                  , bench/qs2/*.out
                  , bench/qs2/Makefile
                  , bench/qs2/binarytree.out1
                  , bench/qs2/binarytree.out2
                  , bench/qs2/binarytree.out3
                  , bench/qs2/binarytree.out4
                  , bench/qs2/binarytree.out5
                  , bench/qs2/binarytree.out6
                  , bench/qs2/binarytree.runtime-zero
                  , bench/qs2/runtime-zero
                  , bench/runtime-zero
                  , bin/compare-arith
                  , bin/compare-arithficial
                  , bin/compare-bool
                  , bin/compare-with-qs
                  , bin/run-heavy-regexes-benchmark
                  , eg/*.hs
                  , mk/depend.mk
                  , mk/ghcdeps
                  , mk/haddock-i
                  , mk/haskell.mk
                  , stack.yaml
                  , test/benchmark
                  , test/benchmark-cmp
                  , test/benchmark-save
                  , test/memory-benchmark
                  , test/model/*.out
                  , test/diff
                  , test/update-diff
                  , test/sdist

tested-with: GHC==8.6
           , GHC==8.4
           , GHC==8.2
           , GHC==8.0
           , GHC==7.10
           , GHC==7.8

source-repository head
  type:            git
  location:        https://github.com/rudymatela/speculate

source-repository this
  type:            git
  location:        https://github.com/rudymatela/speculate
  tag:             v0.4.1


library
  exposed-modules: Test.Speculate
                 , Test.Speculate.Args
                 , Test.Speculate.Function
                 , Test.Speculate.Function.A100
                 , Test.Speculate.Function.A1000
                 , Test.Speculate.Report
                 , Test.Speculate.Engine
                 , Test.Speculate.Expr
                 , Test.Speculate.Expr.Core
                 , Test.Speculate.Expr.Equate
                 , Test.Speculate.Expr.Ground
                 , Test.Speculate.Expr.Instance
                 , Test.Speculate.Pretty
                 , Test.Speculate.Reason
                 , Test.Speculate.Reason.Order
                 , Test.Speculate.SemiReason
                 , Test.Speculate.CondReason
                 , Test.Speculate.Sanity
                 , Test.Speculate.Utils
  other-modules:   Test.Speculate.Utils.Class
                 , Test.Speculate.Utils.Colour
                 , Test.Speculate.Utils.Digraph
                 , Test.Speculate.Utils.List
                 , Test.Speculate.Utils.Memoize
                 , Test.Speculate.Utils.Misc
                 , Test.Speculate.Utils.Ord
                 , Test.Speculate.Utils.PrettyPrint
                 , Test.Speculate.Utils.String
                 , Test.Speculate.Utils.Tiers
                 , Test.Speculate.Utils.Timeout
                 , Test.Speculate.Utils.Tuple
  build-depends: base >= 4 && < 5
               , leancheck >= 0.9.1
               , express >= 0.1.1
               , cmdargs
               , containers
  hs-source-dirs:    src
  default-language:  Haskell2010

test-suite creason
  main-is:           creason.hs
  other-modules:     Test, Test.ListableExpr
  hs-source-dirs:    test
  build-depends:     base >= 4 && < 5, leancheck, express, speculate
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0

test-suite engine
  main-is:           engine.hs
  other-modules:     Test, Test.ListableExpr
  hs-source-dirs:    test
  build-depends:     base >= 4 && < 5, leancheck, express, speculate
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0

test-suite eval
  main-is:           eval.hs
  other-modules:     Test, Test.ListableExpr
  hs-source-dirs:    test
  build-depends:     base >= 4 && < 5, leancheck, express, speculate
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0

test-suite expr
  main-is:           expr.hs
  other-modules:     Test, Test.ListableExpr
  hs-source-dirs:    test
  build-depends:     base >= 4 && < 5, leancheck, express, speculate
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0

test-suite order
  main-is:           order.hs
  other-modules:     Test, Test.ListableExpr
  hs-source-dirs:    test
  build-depends:     base >= 4 && < 5, leancheck, express, speculate
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0

test-suite reason
  main-is:           reason.hs
  other-modules:     Test, Test.ListableExpr
  hs-source-dirs:    test
  build-depends:     base >= 4 && < 5, leancheck, express, speculate
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0

test-suite utils
  main-is:           utils.hs
  other-modules:     Test, Test.ListableExpr
  hs-source-dirs:    test
  build-depends:     base >= 4 && < 5, leancheck, express, speculate
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0

benchmark plus-abs
  main-is:           plus-abs.hs
  hs-source-dirs:    eg
  build-depends:     base >= 4 && < 5, speculate
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0

benchmark test-stats
  main-is:           stats.hs
  other-modules:     Test, Test.ListableExpr
  hs-source-dirs:    test
  build-depends:     base >= 4 && < 5, leancheck, express, speculate
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
